terraform/auto-scaling-ec2-waf-53-rds/waf.tf
# resource "aws_wafv2_web_acl" "waf" {
#   name        = "main-waf"
#   description = "WAF for ALB"
#   scope       = "REGIONAL"
#   default_action {
#     allow {}
#   }
#   visibility_config {
#     cloudwatch_metrics_enabled = true
#     metric_name                = "waf"
#     sampled_requests_enabled   = true
#   }
#   rule {
#     name     = "AWS-AWSManagedRulesCommonRuleSet"
#     priority = 1
#     override_action {
#       none {}
#     }
#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"
#       }
#     }
#     visibility_config {
#       sampled_requests_enabled   = true
#       cloudwatch_metrics_enabled = true
#       metric_name                = "waf-common"
#     }
#   }
# }
